# finances

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  finances.py  migrate_to_assets.py  migrate_to_budget.py  mise.toml  pyproject.toml  schema.yaml  validate_yaml.py
.github/workflows/: docker-publish.yml
data/: example.yaml
finances/: __init__.py  calculations.py  cli.py  filters.py  formatting.py  loader.py  tables.py  types.py  writer.py
tests/: __init__.py  test_calculations.py  test_files_routes.py  test_finances.py  test_tables.py  test_validate_yaml.py  test_writer.py
tests/e2e/: conftest.py  test_accounts.py  test_assets.py  test_budget.py  test_file_picker.py  test_navigation.py
tests/fixtures/: test_finances.yaml
web/: __init__.py  app.py
web/routes/: __init__.py  accounts.py  assets.py  budget.py  common.py  crud.py  edit_mode.py  files.py  status.py
web/static/js/: sortable.js
web/templates/: 404.html  accounts.html  assets.html  base.html  budget.html  file_select.html  status.html
web/templates/macros/: table.html
web/templates/partials/: accounts_cell_display.html  accounts_cell_edit.html  accounts_delete_btn.html  accounts_delete_confirm.html  accounts_delete_icon.html  accounts_row_add.html  accounts_row_display.html  accounts_row_view.html  accounts_tbody.html  assets_cell_display.html  assets_cell_edit.html  assets_delete_confirm.html  assets_delete_icon.html  assets_row_add.html  assets_row_display.html  assets_tbody.html  budget_cell_display.html  budget_cell_edit.html  header.html  (+9 more)
